--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 <section id="main">
       <div class="container">
         <article id="main-col">
-          <h1 class="page-title">(juh-nay. ahh-ee-ko)</h1>
+          <h2 class="page-title">(juh-nay. ahh-ee-ko)</h2>
           <p>"I am not this image<br>I am not my name<br>(Jhene Aiko Efuru Chilombo)<br>I am not my age<br>(March 16 1988)<br>I am not my ethnicity<br>(Japanese, African American, Native American, etc….)<br>I am not where I was born and raised<br>(Los Angeles, California)<br>I am not my mistakes and misfortunes<br>I am not what I have gained and have lost<br>I am
           </p>
           <p>A mother to a beautiful girl named Namiko.<br>A baby sister to 3 brothers, 3 sisters and a big sister to 1.<br>The daughter of Christina Yamamoto and Karamo Chilombo<br>but more relevantly, the Daughter of Water, Earth and the Sun.
@@ -51,7 +51,7 @@
           </p>The message is a simple one: love yourself in this moment, love this moment, know this moment as truth… be this moment… sail you’re soul… don’t sell you’re soul… its the only thing we can take with us, where ever it is we go…
           <p>… “souled out” coming soon…. to be continued…"
           </p>
-          <p><h1 class="page-title">- Jhené Aiko</h1>
+          <p><h3 class="page-title">- Jhené Aiko</h3>
           </p>
         </article>
 
@@ -60,6 +60,69 @@
         </aside>
       </div>
     </section>
+
+<section>
+  <div class="container-a">
+        <div class="row">
+          <div class="col">
+            <h1 class="section-title">Details</h1>
+          </div>
+
+          <div class="column">
+              <h4>Musical Inspirations</h4>
+            <ul>
+              <li>
+                Tupac
+              </li>
+              <li>
+                Snoop Dogg
+              </li>
+              <li>
+                Eminem
+              </li>
+              <li>
+                TLC
+              </li>
+              <li>
+                Mariah Carey
+              </li>
+              <li>
+                Whitney Houston
+              </li>
+              <li>
+                Sade
+              </li>
+              <li>
+                Lil Kim
+              </li>
+              <li>
+                John Mayer
+              </li>
+            </ul>
+          </div>
+
+
+  <div class="column">
+    <h4>Labels</h4>
+      <ul>
+        <li>
+          ARTium
+        </li>
+        <li>
+          Def Jam
+        </li>
+        <li>
+          Island Def Jam (current)
+        </li>
+        <li>
+          TUG
+        </li>
+        <li>
+          Epic (former)
+        </li>
+      </ul>
+    </div>
+  </section>
 
 </body>
 </html>
