--- a/media.html
+++ b/media.html
@@ -32,6 +32,8 @@
     <div class="container"></div>
   </section>
 
+<div class="container"><h1>Media</h1></div>
+<div class="container"><h2>Photos</h2></div>
 
 <section id="boxes">
   <div class="container">
@@ -79,7 +81,7 @@
   </div>
 </section>
 
-
+<div class="container"><h2>Videos</h2></div>
 <div class="video">
   <iframe src="https://player.vimeo.com/video/77990098?byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
   <iframe src="https://player.vimeo.com/video/109198422?byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
