--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Jennifer Ortiz" content="Jhene Aiko">
-    <title>Jhené Aiko | Tour Dates</title>
+    <title>Jhené Aiko | Music</title>
     <link rel="stylesheet" href="./assets/stylesheets/music.css"
   </head>
 
